// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Snap render initial Toast 1`] = `null`;

exports[`Toast Snap render opened  Toast -- props hasMask 1`] = `
<div
  class="at-toast"
>
  <div
    class="at-toast__overlay"
  />
  <div
    class="toast-body toast-body--text"
  >
    <div
      class="toast-body-content"
    />
  </div>
</div>
`;

exports[`Toast Snap render opened  Toast -- props image 1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body at-toast__body--custom-image"
  >
    <div
      class="toast-body-content"
    >
      <div
        class="toast-body-content__img"
      >
        <img
          alt=""
          class="toast-body-content__img-item"
          mode="scaleToFill"
          src="http://storage.360buyimg.com/mtd/home/group-21533885306540.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast Snap render opened Toast -- props icon 1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body"
  >
    <div
      class="toast-body-content"
    >
      <div
        class="toast-body-content__icon"
      >
        <span
          class="at-icon at-icon-loading"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast Snap render opened Toast -- props status : error  1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body toast-body--text at-toast__body--error"
  >
    <div
      class="toast-body-content"
    />
  </div>
</div>
`;

exports[`Toast Snap render opened Toast -- props status : loading  1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body toast-body--text at-toast__body--loading"
  >
    <div
      class="toast-body-content"
    />
  </div>
</div>
`;

exports[`Toast Snap render opened Toast -- props status : success  1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body toast-body--text at-toast__body--success"
  >
    <div
      class="toast-body-content"
    />
  </div>
</div>
`;

exports[`Toast Snap render opened Toast -- props text 1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body toast-body--text"
  >
    <div
      class="toast-body-content"
    >
      <div
        class="toast-body-content__info"
      >
        <span>
          测试数据Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast Snap render opened Toast 1`] = `
<div
  class="at-toast"
>
  <div
    class="toast-body toast-body--text"
  >
    <div
      class="toast-body-content"
    />
  </div>
</div>
`;
